# Airshipper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
backend/: .gitignore  Cargo.toml  Dockerfile  build_server.sh  docker-compose.yml
backend/src/: main.rs
frontend/cli/: Cargo.toml
frontend/cli/src/: lib.rs  main.rs
frontend/client/: Cargo.toml
frontend/client/src/: config.rs  error.rs  filesystem.rs  lib.rs  logger.rs  network.rs  process.rs  profile.rs
frontend/gui/: Cargo.toml
frontend/gui/src/: config.rs  error.rs  main.rs  network.rs  updater.rs
frontend/gui/src/storage/: changelog.rs  mod.rs  news.rs
frontend/gui/src/subscriptions/: download.rs  process.rs
