[package]
name = "client"
# always increment all versions of the frontend
version = "0.3.2"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
dirs = "2.0.2"
find_folder = "0.3.0"
reqwest = "0.10.4"
serde = "1.0.105"
tracing = "0.1.13"
tracing-subscriber = "0.2.3"
human-panic = "1.0.3"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["process"] }